--- a/DevOps-Frontend/nginx.conf
+++ b/DevOps-Frontend/nginx.conf
@@ -9,8 +9,10 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /search {
-        try_files $uri /index.html;
+    # Catch-all for any path not explicitly found
+    error_page 404 /index.html;
+    location = /index.html {
+        internal;
     }
 
     error_page 500 502 503 504 /50x.html;
