--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -31,5 +31,5 @@ jobs:
             cd DevOps-Frontend &&
             pwd &&
             ls -a &&
-            sudo docker-compose down && sudo docker-compose build --no-cache && sudo docker-compose up -d && sudo docker image prune && y
+            sudo docker-compose down && sudo docker-compose build --no-cache && sudo docker-compose up -d && sudo docker image prune -f
           '
