--- a/DevOps-Frontend/docker-compose.yml
+++ b/DevOps-Frontend/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       - "3000:80"
       - "443:443"
     volumes:
-      - /etc/letsencrypt/live/40-85-136-203.nip.io:/etc/letsencrypt/live/40-85-136-203.nip.io
-      - /etc/letsencrypt/archive/40-85-136-203.nip.io:/etc/letsencrypt/archive/40-85-136-203.nip.io
+      - /etc/letsencrypt/live/integration-nation.dk:/etc/letsencrypt/live/integration-nation.dk
+      - /etc/letsencrypt/archive/integration-nation.dk:/etc/letsencrypt/archive/integration-nation.dk
