--- a/DevOps-Frontend/nginx.conf
+++ b/DevOps-Frontend/nginx.conf
@@ -1,15 +1,15 @@
 server {
     listen 80;
-    server_name 40-85-136-203.nip.io;
+    server_name integration-nation.dk;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name 40-85-136-203.nip.io;
+    server_name integration-nation.dk;
 
-    ssl_certificate /etc/letsencrypt/live/40-85-136-203.nip.io/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/40-85-136-203.nip.io/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/integration-nation.dk/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/integration-nation.dk/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
